--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -517,8 +517,8 @@ financebench_id_00222:
 
   category: 4-CALC-AND-JUDGE
   correctness: >-
-    the answer contains a calculated Quick Ratio decimal value that is greater than 1.00,
-    or, alternatively, a calculated percentage value that is greater than 100%
+    the answer contains a calculated Quick Ratio decimal value that is in the range from 1.40 to 1.70,
+    or, alternatively, a calculated percentage value that is in the range from 140% to 170%
 
 
 financebench_id_00995:
