--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -12,7 +12,7 @@ financebench_id_06655: days-payable-outstanding
 financebench_id_00799: quick-ratio-comp
 financebench_id_00684: gross-margin-profile
 financebench_id_03069: da-margin
-financebench_id_00222: quick-ratio
+financebench_id_00222: quick-ratio  #
 financebench_id_04254: unadjusted-ebitda
 financebench_id_00070: working-capital
 financebench_id_02608: net-margin-avg
