update financebench_id_00807 ground truth

--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -1,5 +1,5 @@
 financebench_id_00499: capital-intensiveness
-financebench_id_00807: quick-ratio
+financebench_id_00807: quick-ratio  #
 financebench_id_02987: fixed-asset-turnover-ratio
 financebench_id_07966: capex-as-pct-of-rev
 financebench_id_04735: operating-cash-flow-ratio
