mark financebench_id_00216 expert plan as verified

--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -44,7 +44,7 @@ financebench_id_04080: inventory-turnover-ratio
 financebench_id_00080: working-capital
 financebench_id_03620: unadjusted-ebitda  # TODO: but also less CapEx for question
 financebench_id_04481: ebitda-margin
-financebench_id_00216: quick-ratio
+financebench_id_00216: quick-ratio  #
 financebench_id_00215: capital-intensiveness
 financebench_id_06247: days-payable-outstanding
 financebench_id_04784: operating-margin-profile  # TODO: but also needs to calculate change
