minor edits to examples/FinanceBench/expert-plan-templates.yml > quick-ratio

--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -209,8 +209,9 @@ working-capital-ratio:
         In dollars, what were the total assets in the given fiscal year(s)?
         total assets on the balance sheet.
 
+
 quick-ratio:
-  task: Assess the liquidity health of {COMPANY} through its Quick Ratio as of {PERIOD} fiscal period end.
+  task: Assess liquidity health of {COMPANY} through its Quick Ratio as of {PERIOD} fiscal period end
 
   sub-plans:
     - task: |-
