--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -243,6 +243,64 @@ quick-ratio:
         - Quick Ratio < 1.00: liquidity is not very healthy
 
 
+quick-ratio-comp:
+  task: >-
+    Calculate change and assess degradation/improvement in Quick Ratio of {COMPANY}
+    from corresponding one-year-preceding previous fiscal period end to current {PERIOD} fiscal period end
+
+  sub-plans:
+    - task: |-
+        Calculate Quick Ratio as of one-year-before previous fiscal period end preceding {PERIOD},
+        as decimal value according to formula:
+
+        `Quick Ratio` = (
+          (`Cash & Cash Equivalents` + `Short-Term Investments or Marketable Securities` + `(Net) Accounts Receivable`)
+          / `(Total) Current Liabilities`
+        )
+
+      sub-plans:
+        # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
+        - task: |-
+            What are values in dollars of:
+            - `Cash & Cash Equivalents`;
+            - `Short-Term Investments or Marketable Securities`;
+            - `(Net) Accounts Receivable`; and
+            - `(Total) Current Liabilities`
+            (or most similar-meaning reported line items to those)
+
+            on one same (Consolidated) Balance Sheet of {COMPANY}
+            (and NOT Balance Sheets of its acquired and/or divested companies)
+
+            as of one-year-before previous fiscal period end preceding {PERIOD}?
+
+    - task: |-
+        Calculate Quick Ratio as of current {PERIOD} fiscal period end, as decimal value according to formula:
+
+        `Quick Ratio` = (
+          (`Cash & Cash Equivalents` + `Short-Term Investments or Marketable Securities` + `(Net) Accounts Receivable`)
+          / `(Total) Current Liabilities`
+        )
+
+      sub-plans:
+        # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
+        - task: |-
+            What are values in dollars of:
+            - `Cash & Cash Equivalents`;
+            - `Short-Term Investments or Marketable Securities`;
+            - `(Net) Accounts Receivable`; and
+            - `(Total) Current Liabilities`
+            (or most similar-meaning reported line items to those)
+
+            on one same (Consolidated) Balance Sheet of {COMPANY}
+            (and NOT Balance Sheets of its acquired and/or divested companies)
+
+            as of current {PERIOD} fiscal period end?
+
+    - task: >-
+        Calculate difference between two calculated Quick Ratio decimal values
+        and assess whether Quick Ratio meaningfully degraded or improved
+
+
 free-cash-flow:
   task:
     Calculate the free cash flow of {COMPANY} for {YEAR}. Free cash flow = cash
