--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -2027,8 +2027,8 @@ financebench_id_00216:
 
   category: 4-CALC-AND-JUDGE
   correctness: >-
-    the answer contains a calculated Quick Ratio decimal value that is less than 1.00,
-    or, alternatively, a calculated percentage value that is less than 100%
+    the answer contains a calculated Quick Ratio decimal value that is in the range from 0.40 to 0.70,
+    or, alternatively, a calculated percentage value that is in the range from 40% to 70%
 
 
 financebench_id_00215:
