--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -13,17 +13,24 @@ asset-turnover-ratio:
         In dollars, what were the total assets in the given fiscal year(s)?
         total assets on the balance sheet
 
-fixed-asset-turnover-ratio:
-  task:
-    Calculate the asset turnover ratio of {COMPANY} for {YEAR}. Asset turnover
-    ratio = net sales / (average total assets between {YEAR-1} and {YEAR})
+
+fa-turnover-ratio:
+  task: Calculate Fixed Asset Turnover Ratio of {COMPANY} over {PERIOD} fiscal period
+
   sub-plans:
-    - task:
-        In dollars, what was the net sales in the given fiscal year(s)? sales or
-        income statement.
-    - task:
-        In dollars, what were the total assets in the given fiscal year(s)?
-        total assets on the balance sheet
+    - task: >-
+        What is value in dollars of `(Net) Revenue, a.k.a. (Net) Sales` (or most similar-meaning reported line item)
+        on `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement`
+        of {COMPANY} for {PERIOD} annual fiscal period?
+
+    - task: |-
+        What is simple arithmetic average value in dollars of
+        `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E)` (or most similar-meaning reported line item)
+        on one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position` of {COMPANY}
+        as of two following points in time:
+        - one-year-before previous fiscal period end preceding {PERIOD}; and
+        - {PERIOD} fiscal period end
+
 
 inventory-turnover-ratio:
   task:
