--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -169,6 +169,8 @@ financebench_id_02987:
     the answer contains a calculated Fixed Asset Turnover Ratio decimal value that is in the range from 23.00 to 25.00
     (if the answer is a single number, assume that it is that calculated Fixed Asset Turnover Ratio decimal value)
 
+  evaluator-unreliable: true
+
 
 financebench_id_07966:
   doc: ACTIVISIONBLIZZARD_2019_10K
