--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -19,13 +19,18 @@ fa-turnover-ratio:
 
   sub-plans:
     - task: >-
-        What is value in dollars of `(Net) Revenue, a.k.a. (Net) Sales` (or most similar-meaning reported line item)
-        on `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement`
+        What is value in dollars of `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`
+        (or most similar-meaning reported line item)
+        on `(Consolidated) (Comprehensive) Income Statement,
+        a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) (Comprehensive) Operations Statement`
         of {COMPANY} for {PERIOD} annual fiscal period?
 
+    # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
     - task: |-
         What is simple arithmetic average value in dollars of
-        `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E)` (or most similar-meaning reported line item)
+        `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E), or (Net) Property & Equipment`
+        (or most similar-meaning reported line item)
         on one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position` of {COMPANY}
         as of two following points in time:
         - one-year-before previous fiscal period end preceding {PERIOD}; and
