--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -418,17 +418,29 @@ capital-intensiveness:  # TODO: check
         In dollars, what was the net income in the given fiscal year(s)? income
         or income statement
 
-capex-as-percent-of-revenue:  # TODO: add 2-3-year average
-  task:
-    Calculate the 3 year average from {YEAR} of capex as a percentage of revenue
-    for {COMPANY}.
+
+capex-as-pct-of-rev-3y-avg:
+  task: >-
+    Calculate 3-year average of Capital Expenditure (CapEx) as percentage of Revenue for {COMPANY},
+    as percentage value
+
   sub-plans:
-    - task:
-        In dollars, what was the capital expenditures in the given fiscal
-        year(s)?
-    - task:
-        In dollars, what was the revenue (net sales) in the given fiscal
-        year(s)?
+    - task: >-
+        What are values in dollars of `Capital Expenditure, a.k.a. CapEx` (or most similar-meaning reported line item)
+        on `Cash Flow(s) Statement` of {COMPANY} for past 3 fiscal years?
+
+    - task: >-
+        What are values in dollars of `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales` (or most similar-meaning reported line item)
+        on `(Consolidated) (Comprehensive) Income Statement,
+        a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) (Comprehensive) Operations Statement`
+        of {COMPANY} for past 3 fiscal years?
+
+    - task: >-
+        Calculate 3-year average of Capital Expenditure (CapEx) as percentage of Revenue
+        by dividing sum of `Capital Expenditure, a.k.a. CapEx` by sum of `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`,
+        and return division result as percentage value
+
 
 return-on-assets:
   task:
