mark financebench_id_03849 as verified

--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -35,7 +35,7 @@ financebench_id_10136: retention-ratio
 financebench_id_10499: inventory-turnover-ratio
 financebench_id_04412: asset-turnover-ratio
 financebench_id_03031: working-capital
-financebench_id_03849: capex-as-pct-of-rev-avg
+financebench_id_03849: capex-as-pct-of-rev-3y-avg  #
 financebench_id_01911: interest-coverage-ratio
 financebench_id_00552: debt
 financebench_id_04458: ebitda-margin
