--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -2,8 +2,8 @@ financebench_id_00499: capital-intensiveness
 financebench_id_00807: quick-ratio  #
 financebench_id_02987: fa-turnover-ratio  #
 financebench_id_07966: capex-as-pct-of-rev-3y-avg  #
-financebench_id_04735: operating-cash-flow-ratio
-financebench_id_03856: operating-cash-flow-ratio
+financebench_id_04735: op-cf-ratio  #
+financebench_id_03856: op-cf-ratio  #
 financebench_id_00438: operating-margin-profile
 financebench_id_00591: free-cash-flow-conversion
 financebench_id_00540: inventory-turnover-ratio
