--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -80,16 +80,45 @@ unadjusted-operating-income:
         In dollars, what was the net sales in the given fiscal year(s)? sales or
         income statement
 
-operating-margin-profile:
-  task:
-    Calculate the operating margin of {COMPANY} for {YEAR}. Operating margin =
-    operating income / net sales
-  sub-plans:
-    - task:
-        In dollars, what was the operating income in the given fiscal year(s)?
 
-    - task:
-        In dollars, what was the revenue (net sales) in the given fiscal year(s)
+op-margin-comp:
+  task: >-
+    Calculate change and assess degradation/improvement in `(Unadjusted) Operating (Income or Profit) Margin` of {COMPANY}
+    from corresponding one-year-preceding previous fiscal period to current {PERIOD} fiscal period
+
+  sub-plans:
+    - task: |-
+        Calculate Operating Margin for following two fiscal periods:
+        - one-year-before previous fiscal period preceding {PERIOD}; and
+        - {PERIOD} fiscal period
+
+        as percentage values according to formula:
+
+        `(Unadjusted) Operating (Income or Profit) Margin` = (
+          `(Unadjusted) Operating Income, a.k.a. Operating Profit` /
+          `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`
+        )
+
+      sub-plans:
+        # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
+        - task: |-
+            What are values in dollars of:
+            - `(Unadjusted) Operating Income, a.k.a. Operating Profit`; and
+            - `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`
+            (or most similar-meaning reported line items to those)
+
+            on one same `(Consolidated) (Comprehensive) Income Statement,
+            a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
+            or (Consolidated) (Comprehensive) Operations Statement` of {COMPANY}
+
+            for following two fiscal periods:
+            - one-year-before previous fiscal period preceding {PERIOD}; and
+            - {PERIOD} fiscal period?
+
+    - task: >-
+        Calculate difference between two calculated `(Unadjusted) Operating (Income or Profit) Margin` percentage values
+        and assess whether `(Unadjusted) Operating (Income or Profit) Margin` meaningfully degraded or improved
+
 
 unadjusted-ebitda:
   task:
