--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -331,15 +331,54 @@ free-cash-flow:
         In dollars, what was the capital expenditures in the given fiscal
         year(s)
 
-free-cash-flow-conversion:  # TODO: check denominator, add yoy comparison
-  task:
-    Calculate the free cash flow conversion of {COMPANY} for {YEAR}. Free cash
-    flow conversion = free cash flow / net income
+
+fcf-conv-comp:
+  task: >-
+    Calculate change and assess degradation/improvement in `Free Cash Flow Conversion Ratio` of {COMPANY}
+    from corresponding one-year-preceding previous fiscal period to current {PERIOD} fiscal period
+
   sub-plans:
-    - task: In dollars, what was the free cash flow in the given fiscal year(s)?
-    - task:
-        In dollars, what was the net income in the given fiscal year(s)? income
-        or income statement.
+    - task: |-
+        Calculate `Free Cash Flow Conversion Ratio` as percentage values according to formula:
+
+        `Free Cash Flow Conversion Ratio` = (
+          (`Cash Flows from Operations, a.k.a. Operating Cash Flows` - `Capital Expenditure, a.k.a. CapEx`)
+          / `Net Income, a.k.a. Net Profit`
+        )
+
+        for following two fiscal periods:
+        - one-year-before previous fiscal period preceding {PERIOD}; and
+        - {PERIOD} fiscal period
+
+      sub-plans:
+        # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
+        - task: |-
+            What are values in dollars of:
+            - `Cash Flows from Operations, a.k.a. Operating Cash Flows`; and
+            - `Capital Expenditure, a.k.a. CapEx`
+            (or most similar-meaning reported line items to those)
+
+            on one same `Cash Flow(s) Statement` of {COMPANY}
+
+            for following two fiscal periods:
+            - one-year-before previous fiscal period preceding {PERIOD}; and
+            - {PERIOD} fiscal period
+
+        # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
+        - task: |-
+            What are values in dollars of `Net Income, a.k.a. Net Profit` (or most similar-meaning reported line item)
+
+            on one same `(Consolidated) (Comprehensive) Income Statement,
+            a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
+            or (Consolidated) (Comprehensive) Operations Statement` of {COMPANY}
+
+            for following two fiscal periods:
+            - one-year-before previous fiscal period preceding {PERIOD}; and
+            - {PERIOD} fiscal period
+
+    - task: >-
+        Calculate difference between two calculated `Free Cash Flow Conversion Ratio` percentage values
+        and assess whether `Free Cash Flow Conversion Ratio` meaningfully degraded or improved
 
 
 op-cf-ratio:
