--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -349,7 +349,7 @@ fcf-conv-comp:
 
         `Free Cash Flow Conversion Ratio` = (
           (`Cash Flows from Operations, a.k.a. Operating Cash Flows` - `Capital Expenditure, a.k.a. CapEx`)
-          / `Net Income, a.k.a. Net Profit`
+          / `Net Income, a.k.a. Net Profit (Attributable to Shareholders)`
         )
 
         for following two fiscal periods:
@@ -372,7 +372,8 @@ fcf-conv-comp:
 
         # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
         - task: |-
-            What are values in dollars of `Net Income, a.k.a. Net Profit` (or most similar-meaning reported line item)
+            What are values in dollars of `Net Income, a.k.a. Net Profit (Attributable to Shareholders)`
+            (or most similar-meaning reported line item)
 
             on one same `(Consolidated) (Comprehensive) Income Statement,
             a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
