--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -35,20 +35,33 @@ fa-turnover-ratio:
         on one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position` of {COMPANY}
         as of two following points in time:
         - one-year-before previous fiscal period end preceding {PERIOD}; and
-        - {PERIOD} fiscal period end
+        - {PERIOD} fiscal period end?
 
 
-inventory-turnover-ratio:
-  task:
-    Calculate the inventory turnover ratio of {COMPANY} for {YEAR}. Inventory
-    turnover ratio = COGS / average inventory between {YEAR-1} and {YEAR}
+inv-turnover-ratio:
+  task: |-
+    Calculate `Inventory Turnover Ratio` of {COMPANY} over {PERIOD} annual fiscal period as decimal value according to formula:
+
+    `Inventory Turnover Ratio, a.k.a. Inventory Conversion Ratio` = (
+      `Cost of Goods Sold, a.k.a. COGS, or Cost of Revenue` /
+      `average (Net) Inventory, typically between two consecutive fiscal year-ends`
+    )
+
   sub-plans:
-    - task:
-        In dollars, what was the cost of sales in the given fiscal year(s)?
-        operating expenses or income statement.
-    - task:
-        In dollars, what were the inventories in the given fiscal year(s)?
-        current assets on the balance sheet
+    - task: >-
+        What is value in dollars of `Cost of Goods Sold, a.k.a. COGS, or Cost of Revenue`
+        (or most similar-meaning reported line item)
+        on `(Consolidated) (Comprehensive) Income Statement,
+        a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) (Comprehensive) Operations Statement` of {COMPANY}
+        for {PERIOD} annual fiscal period?
+
+    - task: |-
+        What is simple arithmetic average value in dollars of `(Net) Inventory` (or most similar-meaning reported line item)
+        on one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position` of {COMPANY}
+        as of two following points in time:
+        - one-year-before previous annual fiscal period end preceding {PERIOD}; and
+        - {PERIOD} annual fiscal period end?
 
 
 # INCOME & PROFITABILITY METRIC EVALUATION
