--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -32,7 +32,7 @@ financebench_id_04103: cash-conversion-cycle
 financebench_id_03471: working-capital-ratio
 financebench_id_04854: free-cash-flow
 financebench_id_10136: retention-ratio
-financebench_id_10499: inventory-turnover-ratio
+financebench_id_10499: inv-turnover-ratio  #
 financebench_id_04412: asset-turnover-ratio
 financebench_id_03031: working-capital
 financebench_id_03849: capex-as-pct-of-rev-3y-avg  #
