--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -43,13 +43,13 @@ inv-turnover-ratio:
     Calculate `Inventory Turnover Ratio` of {COMPANY} over {PERIOD} annual fiscal period as decimal value according to formula:
 
     `Inventory Turnover Ratio, a.k.a. Inventory Conversion Ratio` = (
-      `Cost of Goods Sold, a.k.a. COGS, or Cost of Revenue` /
+      `Cost of Goods Sold, a.k.a. COGS, or Cost of Sales, or Cost of Revenue` /
       `average (Net) Inventory, typically between two consecutive fiscal year-ends`
     )
 
   sub-plans:
     - task: >-
-        What is value in dollars of `Cost of Goods Sold, a.k.a. COGS, or Cost of Revenue`
+        What is value in dollars of `Cost of Goods Sold, a.k.a. COGS, or Cost of Sales, or Cost of Revenue`
         (or most similar-meaning reported line item)
         on `(Consolidated) (Comprehensive) Income Statement,
         a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
