rename examples/FinanceBench/htp_oodar_agent module

--- a/examples/FinanceBench/Makefile
+++ b/examples/FinanceBench/Makefile
@@ -3,16 +3,16 @@ get-doc:
 
 
 htp-auto-static-oodar-solve:
-	@poetry run python htp-oodar-agent.py ${id}
+	@poetry run python htp_oodar_agent.py ${id}
 
 htp-auto-dynamic-oodar-solve:
-	@poetry run python htp-oodar-agent.py ${id} --dynamic-exec
+	@poetry run python htp_oodar_agent.py ${id} --dynamic-exec
 
 htp-expert-static-oodar-solve:
-	@poetry run python htp-oodar-agent.py ${id} --expert-plan
+	@poetry run python htp_oodar_agent.py ${id} --expert-plan
 
 htp-expert-dynamic-oodar-solve:
-	@poetry run python htp-oodar-agent.py ${id} --expert-plan --dynamic-exec
+	@poetry run python htp_oodar_agent.py ${id} --expert-plan --dynamic-exec
 
 
 ooda-solve:
